i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0/sql-manual/sql-functions/scalar-functions/date-time-functions/from-days.md
---
{
    "title": "FROM_DAYS",
    "language": "zh-CN"
}
---

## 描述

FROM_DAYS 函数用于将一个整数天数转换为对应的日期（DATE 类型）。该函数以 “公元 0 年 1 月 1 日” 为基准（即天数 0 对应 0000-01-01），计算从基准日期开始经过指定天数后的日期。

注意：为与 MySQL 保持行为一致，FROM_DAYS 函数不支持 “公元 0 年 2 月 29 日”（0000-02-29），即使理论上该年份符合闰年规则，也会自动跳过该日期。
历史日期限制：该函数基于公历（格里高利历）扩展历法计算，不适用于 1582 年公历推行之前的日期（此时实际使用的是儒略历），可能导致结果与历史真实日期偏差。

## 语法

```sql
FROM_DAYS(<dt>)
```

## 参数

| 参数 | 说明 |
| -- | -- |
| `<dt>` | 	输入的天数，为 `INT` 类型 |

## 返回值

返回值为 DATE 类型，格式为 YYYY-MM-DD，表示从基准日期（0000-01-01）开始经过 `dt` 天后的日期。
若 `dt` 为负数，返回 NULL。
若 `dt` 超出有效日期范围（通常为 1 到 3652424，对应约公元 10000 年），返回 NULL。

## 举例

```sql

---从基准日期开始计算天数
select from_days(730669),from_days(5),from_days(59), from_days(60);

+-------------------+--------------+---------------+---------------+
| from_days(730669) | from_days(5) | from_days(59) | from_days(60) |
+-------------------+--------------+---------------+---------------+
| 2000-07-03        | 0000-01-05   | 0000-02-28    | 0000-03-01    |
+-------------------+--------------+---------------+---------------+

---输入参数为负数，返回 NULL
select from_days(-60);

+----------------+
| from_days(-60) |
+----------------+
| NULL           |
+----------------+

---超出日期最大范围 ，返回 NULL
select from_days(3652425);
+--------------------+
| from_days(3652425) |
+--------------------+
| NULL               |
+--------------------+

---输入 NULL ,返回 NULL
select from_days(NULL);
+-----------------+
| from_days(NULL) |
+-----------------+
| NULL            |
+-----------------+
```